# GPlus

./: .gitignore  CMakeLists.txt  README.md  cpplint.py  cpplint.sh  gplus.sln  gplus.vcxproj  gplus.vcxproj.filters
base/: CMakeLists.txt  exception.cpp  exception.h  global_variables.h  gplus.cpp  gplus.h  subcommand.h  subcommand_list.cpp  subcommand_list.h
crashpad/mac_tools/: crashpad_handler  dump_syms  minidump_dump  minidump_stackwalk
data/: CMakeLists.txt  bed_file.cpp  bed_file.h  bim_file.cpp  bim_file.h  fam_file.cpp  fam_file.h  score_file.cpp  score_file.h  text_file_reader.cpp  text_file_reader.h
examples/: .test.bim.swp  scores.txt  scores_no_header.txt  test.bed  test.bim  test.fam  test.map  test.ped
gplus.xcodeproj/: project.pbxproj
gplus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/win/crashpad/Debug/: crashpad_handler.com
lib/win/crashpad/Debug/lib/: base.lib  crashpad_client.lib
lib/win/crashpad/Debug/lib_MD/: base.lib  crashpad_client.lib
lib/win/crashpad/Debug_x64/: crashpad_handler.com
lib/win/crashpad/Release/: crashpad_handler.com
lib/win/crashpad/Release_x64/: crashpad_handler.com
subcommands/: CMakeLists.txt  help_subcommand.cpp  help_subcommand.h  profile_subcommand.cpp  profile_subcommand.h  test_bed_subcommand.cpp  test_bed_subcommand.h
subcommands/util/: executable_path.cpp
util/: CMakeLists.txt  allele.cpp  allele.h  executable_path.cpp  executable_path.h  file_helper.cpp  file_helper.h  log.cpp  log.h  math.h  program_options.cpp  program_options.h  text_file_reader.cpp  text_file_reader.h
(+9 files in other folders)
