cmake_minimum_required(VERSION 3.13)
project(gplus)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.67.0 EXACT REQUIRED COMPONENTS log program_options)
include_directories(. third_party)
add_executable(gplus)
target_link_libraries(gplus ${Boost_LIBRARIES})
add_subdirectory(util)
add_subdirectory(data)
add_subdirectory(subcommands)
add_subdirectory(base)
